tests/purs/passing/ReExportQualified/A.purs
module A where

x = "Do"
