tests/purs/failing/ExportConflictType/A.purs
module A where

data T
